...
                                                    <button opaque="NO" alpha="0.94999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T1V-ld-fKj" userLabel="Picker">
                                                        <rect key="frame" x="0.0" y="1" width="288" height="64"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="categoryButton"/>
                                                        <color key="tintColor" red="0.23770004510000001" green="0.28147938849999998" blue="0.33557069299999998" alpha="0.79791845029999997" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="230" height="48"/>
                                                <color key="backgroundColor" name="MainYellowOpacity"/>
                                                <accessibility key="accessibilityConfiguration" identifier="historyButton"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <state key="normal" title="История игр">
...
                                                <rect key="frame" x="240" y="0.0" width="48" height="48"/>
                                                <color key="backgroundColor" name="MainYellowOpacity"/>
                                                <accessibility key="accessibilityConfiguration" identifier="settingsButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="48" id="MFP-cx-ZJB"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="288" height="56"/>
                                                <color key="backgroundColor" name="MainYellowOpacity"/>
                                                <accessibility key="accessibilityConfiguration" identifier="gameButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="56" id="u18-MC-pOa"/>
...
                                                <rect key="frame" x="0.0" y="66" width="288" height="56"/>
                                                <color key="backgroundColor" name="MainYellowOpacity"/>
                                                <accessibility key="accessibilityConfiguration" identifier="continueButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="56" id="zg8-CA-eai"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H2o-wB-HEB" userLabel="ShareButton">
                                <rect key="frame" x="107.5" y="613" width="160" height="52"/>
                                <accessibility key="accessibilityConfiguration" identifier="statsButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="52" id="042-Hx-5qP"/>
...
